--- a/index.html
+++ b/index.html
@@ -100,9 +100,20 @@
       <input type="button" value="검증" onclick="test();"/>
 
 <br><br><br><br><br><br><br>
+
       블록체인 컨트랙트 주소: <span id="contractAddr"></span>
       My Account 주소:<span id="accountAddr"></span>
 
+        <li>컨트랙트에 저장된 값: <span id="HashedData"></span>
+          <button onclick="getValue()">새로고침</button> (현재블록: <span id="lastBlock"></span>)</li>
+        <li><input id="newValue" type="text"><button onclick="setValue()">새 값으로 저장하기</button>
+            <div id="result"></div></li>
+        <li>새 값을 저장한 후 팬딩 트랜잭션이 블록에 포함되면 자동으로 페이지가 업데이트될 것입니다.</li>
+      </ul>
+
+      <ul>
+        <li>컨트랙트 주소: <span id="contractAddr"></span></li>
+        <li>내 어카운트 주소: <span id="accountAddr"></span></li>
         <li>컨트랙트에 저장된 값: <span id="storedData"></span>
           <button onclick="getValue()">새로고침</button> (현재블록: <span id="lastBlock"></span>)</li>
         <li><input id="newValue" type="text"><button onclick="setValue()">새 값으로 저장하기</button>
@@ -115,13 +126,12 @@
 
 
 
-
-
 <script src="./CryptoJS/rollups/md5.js"></script>
 <!--해시값을 구하기 위한 Crypto-js -->
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 <!-- script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script -->
 <script>
+
 var contractAddress = '0xeAb3436A6047854159a263292618f68eA4A01e2D';
 var abi = [{"constant":false,"inputs":[{"name":"x","type":"uint256"}],"name":"set","outputs":[],"payable":false,"type":"function"},{"constant":true,"inputs":[],"name":"get","outputs":[{"name":"","type":"uint256"}],"payable":false,"type":"function"}];
 var simpleStorageContract;
@@ -169,7 +179,7 @@ function getLink(addr) {
 
 function getValue() {
   simpleStorage.get(function(e,r){
-    document.getElementById('storedData').innerHTML=r.toNumber();
+    document.getElementById('HashedData').innerHTML=r.toNumber();
 
   });
   web3.eth.getBlockNumber(function(e,r){
@@ -179,7 +189,7 @@ function getValue() {
 
 function setValue() {
 
-  var newValue = document.getElementById('newValue').value;
+  var newValue = document.getElementById('res').value;
   var txid
   simpleStorage.set(newValue, function(e,r){
     document.getElementById('result').innerHTML = 'Transaction id: ' + r + '<span id="pending" style="color:red;">(Pending)</span>';
@@ -192,7 +202,7 @@ function setValue() {
       if (r != null && r.blockNumber > 0) {
         document.getElementById('pending').innerHTML = '(기록된 블록: ' + r.blockNumber + ')';
         document.getElementById('pending').style.cssText ='color:green;';
-        document.getElementById('storedData').style.cssText ='color:green; font-size:300%;';
+        document.getElementById('HashedData').style.cssText ='color:green; font-size:300%;';
         filter.stopWatching();
       }
    });
