--- a/simplestorage.html
+++ b/simplestorage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.3/milligram.min.css">
-  <title>블록체인의 무결성을 활용한 영상 정보 보안 솔루션</title>
+  <title>Simple Storage Dapp 예제 </title>
   <style>
     body {margin-left:50px;}
     #storedData {font-size:300%; margin-right:10px;}
@@ -27,20 +27,28 @@
 <script src="https://gist.github.com/atomrigs/7c633570496b79623bed5d1286f93f3a.js"></script>
 
 HTML 소스<br>
-<a href="https://github.com/atomrigs/atomrigs.github.io/blob/master/simplestorage.html">https://github.com/atomrigs/atomrigs.github.io/blob/master/simplestorage.html</a>
+<a href="https://github.com/atomrigs/atomrigs.github.io/blob/master/HashStorage.html">https://github.com/atomrigs/atomrigs.github.io/blob/master/HashStorage.html</a>
 <br><br>
 <p>
 <a href="http://www.chaintalk.io/archive/lecture?sca=%EB%82%98%EB%8F%84+dApp+%EA%B0%9C%EB%B0%9C"><i>나도 dApp 개발해 보자 시리즈 by Atomrigs © 2017</i></a>
 </p>
 
 </body>
+<script    src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
+<script    src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/sha256.js"></script>
+<!-- 자바스크립트 AES 암호화"></script -->
+
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 <!-- script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script -->
 <script>
 var contractAddress = '0xde856446a16a7c24a9819767be3d05583aa3063d';
 var abi = [{"constant":false,"inputs":[{"name":"x","type":"uint256"}],"name":"set","outputs":[],"payable":false,"type":"function"},{"constant":true,"inputs":[],"name":"get","outputs":[{"name":"","type":"uint256"}],"payable":false,"type":"function"}];
-var simpleStorageContract;
-var simpleStorage;
+var HashStorageContract;
+var HashStorage;
+
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+
 
 window.addEventListener('load', function() {
 
@@ -58,8 +66,8 @@ window.addEventListener('load', function() {
 });
 
 function startApp() {
-  simpleStorageContract = web3.eth.contract(abi);
-  simpleStorage = simpleStorageContract.at(contractAddress);
+  HashStorageContract = web3.eth.contract(abi);
+  HashStorage = HashStorageContract.at(contractAddress);
   document.getElementById('contractAddr').innerHTML = getLink(contractAddress);
   web3.eth.getAccounts(function(e,r){
     document.getElementById('accountAddr').innerHTML = getLink(r[0]);
@@ -73,7 +81,7 @@ function getLink(addr) {
 }
 
 function getValue() {
-  simpleStorage.get(function(e,r){
+  HashStorage.get(function(e,r){
     document.getElementById('storedData').innerHTML=r.toNumber();
 
   });
@@ -84,9 +92,9 @@ function getValue() {
 
 function setValue() {
 
-  var newValue = document.getElementById('newValue').value;
+  var newValue = res.value
   var txid
-  simpleStorage.set(newValue, function(e,r){
+  HashStorage.set(newValue, function(e,r){
     document.getElementById('result').innerHTML = 'Transaction id: ' + r + '<span id="pending" style="color:red;">(Pending)</span>';
     txid = r;
   });
